# verifiNN

./: .gitignore  BasicNN.py  BasicNNMatrix.py  Controller.py  README.md  TrainingTask.py  controllertest.py  pyproject.toml  requirements.txt  setup.py  setup.sh
analysis/: nn-identity-analysis.txt
src/utils/: algorithm.py  linear_regression.py  model.py  network.py
src/verifiNN/: example.py  examples.py  trainer.py  verifier.py
src/verifiNN/algorithms/: algorithm.py
src/verifiNN/models/: linear_regression.py  model.py  models.py  network.py
src/verifiNN/utils/: algorithm.py  common_utils.py  network.py  utils.py
tests/: test.py  tests.py
utils/: algorithm.py  calculus.py  commonutils.py  linear_regression.py  network.py  numpyutils.py
verifiNN/: TrainingTask.py
verifiNN/utils/: network.py  numpyutils.py
