[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "verifiNN"
version = "0.0.0.dev10"
description="A package for robustness verification of neural networks using optimization methods."
readme="README.md"
authors = [
  {name = "Ayush Bharadwaj", email = "ayush.bharadwaj@gmail.com"},
]
maintainers = [
  {name = "Ayush Bharadwaj", email = "ayush.bharadwaj@gmail.com"}
]
classifiers=[
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python"
]
keywords=[
  "neural networks", "verification", "convex optimization", "semidefinite programming"
]
requires-python = ">=3.7"
dependencies = [
  "numpy == 1.21.5",
  "scipy == 1.7.3",
  "cvxpy == 1.3.1",
]

[project.urls]
homepage = "https://github.com/ayusbhar2/verifiNN"